[ranger] kindof made component using shadowDOM

--- a/projects/javaScript/DOM/range/RangerComponent/template.html
+++ b/projects/javaScript/DOM/range/RangerComponent/template.html
@@ -32,16 +32,16 @@
   .container .range-element .runner .needle {
     position: absolute;
     width: 1px;
-    height: 9rem;
+    height: 2rem;
     left: 0.75rem;
     background-color: #000;
   }
-  .container .ruler {
+  /* .container .ruler {
     margin-top: 1rem;
     display: block;
     height: 6.5rem;
     background-color: #d3d3d3;
-  } /*# sourceMappingURL=styles.css.map */
+  } # sourceMappingURL=styles.css.map */
 </style>
 <div class="container">
   <h2 id="data">--</h2>
@@ -51,8 +51,8 @@
       <div class="needle"></div>
     </div>
   </div>
-
+  <!-- 
   <div class="ruler">
     <canvas class="canvas"></canvas>
-  </div>
+  </div> -->
 </div>
