--- a/projects/javaScript/DOM/range/index.html
+++ b/projects/javaScript/DOM/range/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <ranger-component></ranger-component>
-
-    <script type="module" src="rangerComponent.js"></script>
+    <ranger-component id="ranger"></ranger-component>
+    <script type="module" src="./RangerComponent/rangerComponent.js"></script>
   </body>
 </html>
