[plotting] still trying to make rangeSlider independant

--- a/index.html
+++ b/index.html
@@ -536,6 +536,9 @@
 
       <section>
         <h2 id="work-in-progress">Dabar daroma...</h2>
+        <a href="https://github.com/dkunf/shop/tree/master/src/components"
+          ><img class="screenshots" src="./images/react/react-shop.png" alt=""
+        /></a>
       </section>
 
       <!-- wrknow -->
