--- a/projects/javaScript/DOM/canvas/plottingGraphs.html
+++ b/projects/javaScript/DOM/canvas/plottingGraphs.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+
     <title>Graphs</title>
     <style>
       #canvas {
@@ -12,7 +14,8 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <ranger-component id="ranger"></ranger-component>
 
-    <script src="./plottingFn.js"></script>
+    <script type="module" src="./plottingFn.js"></script>
   </body>
 </html>
