+linkToNetlify react app

--- a/projects/javaScript/DOM/canvas/plottingGraphs.html
+++ b/projects/javaScript/DOM/canvas/plottingGraphs.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <ranger-component id="ranger"></ranger-component>
+    <!-- <ranger-component id="ranger"></ranger-component> -->
 
     <script type="module" src="./plottingFn.js"></script>
   </body>
